--- a/.eslintrc
+++ b/.eslintrc
@@ -37,6 +37,7 @@
     "react/react-in-jsx-scope": "off",
     "react/jsx-filename-extension": "off",
     "react/function-component-definition": [2, { "namedComponents": "arrow-function" }],
-    "import/no-extraneous-dependencies": ["error", { "devDependencies": ["**/*.test.js", "**/*.test.tsx"] }]
+    "import/no-extraneous-dependencies": ["error", { "devDependencies": ["**/*.test.js", "**/*.test.tsx"] }],
+    "no-param-reassign": "off"
   }
 }
