--- a/.eslintrc
+++ b/.eslintrc
@@ -38,6 +38,9 @@
     "react/jsx-filename-extension": "off",
     "react/function-component-definition": [2, { "namedComponents": "arrow-function" }],
     "import/no-extraneous-dependencies": ["error", { "devDependencies": ["**/*.test.js", "**/*.test.tsx"] }],
-    "no-param-reassign": "off"
+    "no-param-reassign": "off",
+    "react/jsx-props-no-spreading": [0],
+    "import/prefer-default-export": "off",
+    "react/button-has-type": "off"
   }
 }
