--- a/.eslintrc
+++ b/.eslintrc
@@ -41,6 +41,8 @@
     "no-param-reassign": "off",
     "react/jsx-props-no-spreading": [0],
     "import/prefer-default-export": "off",
-    "react/button-has-type": "off"
+    "react/button-has-type": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/no-noninteractive-element-interactions": "off"
   }
 }
