--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "qa-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://felipevlourenco.github.io/qa-app",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
     "react": "^18.1.0",
@@ -27,12 +28,15 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "gh-pages": "^4.0.0",
     "prettier": "^2.6.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4",
     "typescript-plugin-css-modules": "^3.4.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll=false",
